--- a/css/form.css
+++ b/css/form.css
@@ -1,6 +1,6 @@
 body
 {
-    background: url('../img/be-back.jpg') fixed center;
+    background: url('../resources/img/be-back.jpg') fixed center;
     background-size: cover;
     padding: 0; 
     margin: 0;
